--- a/{{ cookiecutter.formula_name }}-formula/{{cookiecutter.formula_name}}/templates/conf.jinja
+++ b/{{ cookiecutter.formula_name }}-formula/{{cookiecutter.formula_name}}/templates/conf.jinja
@@ -1,1 +1,2 @@
-{% from {{ cookiecutter.formula_name }}/map.jinja import {{ cookiecutter.formula_name }} with context %}
+ {{ '{%' }} from '{{ cookiecutter.formula_name }}/map.jinja' import {{ cookiecutter.formula_name }} with context {{ '%}' }}
+
